A partially implements customization - language. Added languageTexts package which contains classes that sets the language for each activity.

--- a/phase2/app/src/main/res/layout/activity_picture_instructions.xml
+++ b/phase2/app/src/main/res/layout/activity_picture_instructions.xml
@@ -10,7 +10,7 @@
         android:id="@+id/titleText4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="16dp"
         android:fontFamily="@font/montserrat_bold"
         android:text="Picture Game"
         android:textColor="#636363"
@@ -26,8 +26,7 @@
         android:id="@+id/title2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Welcome to Picture Game!"
+        android:layout_marginTop="16dp"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="24sp"
@@ -37,10 +36,11 @@
 
     <TextView
         android:id="@+id/instructionsText"
-        android:layout_width="296dp"
-        android:layout_height="409dp"
-        android:layout_marginTop="24dp"
-        android:text="Here you will be given a series of pictures among which a variety of woodland creatures are hiding. It is your job to deem correctly what creature lies within the lines. You will have five guesses to correctly determine the given animal. Each consecutive level has increasingly difficult images for you to guess. Good luck!"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="24sp"
@@ -52,7 +52,7 @@
         android:id="@+id/gotItButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="16dp"
         android:onClick="onGotItPressed"
         android:text="@string/got_it_button"
         android:textAllCaps="false"
