--- a/phase2/app/src/main/res/layout/activity_reaction_time.xml
+++ b/phase2/app/src/main/res/layout/activity_reaction_time.xml
@@ -17,7 +17,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="#00FFFFFF"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/renner"
         android:gravity="center"
         android:text="Instruction Message"
         android:textColor="#FFFFFF"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/montserrat_bold"
+        android:fontFamily="@font/renner"
         android:text="Reaction Time"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
@@ -53,7 +53,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="136dp"
         android:layout_marginBottom="280dp"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/renner"
         android:text="@string/tap_to_continue"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="13dp"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/renner"
         android:text="0/5"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginBottom="24dp"
-        android:fontFamily="@font/montserrat"
+        android:fontFamily="@font/renner"
         android:text="0ms"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
