--- a/phase2/app/src/main/res/layout/activity_hangman.xml
+++ b/phase2/app/src/main/res/layout/activity_hangman.xml
@@ -10,7 +10,8 @@
         android:id="@+id/title"
         android:layout_width="164dp"
         android:layout_height="39dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/renner"
         android:text="Hangman"
         android:textAlignment="center"
         android:textSize="30sp"
@@ -23,7 +24,7 @@
         android:id="@+id/resultImage"
         android:layout_width="245dp"
         android:layout_height="316dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title"
@@ -34,6 +35,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:fontFamily="@font/renner"
         android:text="_ _ _ _ s a s _ "
         android:textAlignment="center"
         android:textAllCaps="true"
@@ -47,6 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/renner"
         android:text="@string/correct"
         android:textAlignment="center"
         android:textAllCaps="true"
@@ -71,6 +74,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="Q"
             android:textColor="#FFFFFF" />
@@ -80,6 +84,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="W"
             android:textColor="#FFFFFF" />
@@ -89,6 +94,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="E"
             android:textColor="#FFFFFF" />
@@ -98,6 +104,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="R"
             android:textColor="#FFFFFF" />
@@ -107,6 +114,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="T"
             android:textColor="#FFFFFF" />
@@ -116,6 +124,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="Y"
             android:textColor="#FFFFFF" />
@@ -125,6 +134,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="U"
             android:textColor="#FFFFFF" />
@@ -134,6 +144,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="I"
             android:textColor="#FFFFFF" />
@@ -143,6 +154,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="O"
             android:textColor="#FFFFFF" />
@@ -152,6 +164,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="P"
             android:textColor="#FFFFFF" />
@@ -171,6 +184,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="A"
             android:textColor="#FFFFFF" />
@@ -180,6 +194,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="S"
             android:textColor="#FFFFFF" />
@@ -189,6 +204,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="D"
             android:textColor="#FFFFFF" />
@@ -198,6 +214,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="F"
             android:textColor="#FFFFFF" />
@@ -207,6 +224,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="G"
             android:textColor="#FFFFFF" />
@@ -216,6 +234,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="H"
             android:textColor="#FFFFFF" />
@@ -225,6 +244,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="J"
             android:textColor="#FFFFFF" />
@@ -234,6 +254,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="K"
             android:textColor="#FFFFFF" />
@@ -243,6 +264,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="L"
             android:textColor="#FFFFFF" />
@@ -263,6 +285,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="Z"
             android:textColor="#FFFFFF" />
@@ -272,6 +295,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="X"
             android:textColor="#FFFFFF" />
@@ -281,6 +305,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="C"
             android:textColor="#FFFFFF" />
@@ -290,6 +315,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="V"
             android:textColor="#FFFFFF" />
@@ -299,6 +325,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="B"
             android:textColor="#FFFFFF" />
@@ -308,6 +335,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="N"
             android:textColor="#FFFFFF" />
@@ -317,6 +345,7 @@
             android:layout_width="@dimen/keyboard_button_width"
             android:layout_height="@dimen/keyboard_button_height"
             android:backgroundTint="#009688"
+            android:fontFamily="@font/renner"
             android:onClick="onLetterPressed"
             android:text="M"
             android:textColor="#FFFFFF" />
@@ -327,6 +356,7 @@
         android:id="@+id/continueButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/renner"
         android:onClick="OnContinueButtonPressed"
         android:text="@string/continue_button"
         app:layout_constraintBottom_toBottomOf="parent"
