--- a/phase2/app/src/main/res/layout/activity_picture_game.xml
+++ b/phase2/app/src/main/res/layout/activity_picture_game.xml
@@ -6,34 +6,74 @@
     android:layout_height="match_parent"
     tools:context=".Games.PictureGame.PictureGameActivity">
 
+    <TextView
+        android:id="@+id/timePlayedGameText"
+        android:layout_width="79dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="60dp"
+        android:fontFamily="@font/renner"
+        android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/timePlayedGameLabel"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/timePlayedGameLabel"
+        android:layout_width="197dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/renner"
+        android:text="Time Played Game:"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
+
     <EditText
         android:id="@+id/guessEditText"
         android:layout_width="217dp"
         android:layout_height="51dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="72dp"
         android:layout_marginTop="16dp"
+        android:layout_marginBottom="50dp"
         android:autofillHints=""
         android:ems="10"
+        android:fontFamily="@font/renner"
         android:hint="@string/drawing_guess_message"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.151"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guessResultText" />
+        app:layout_constraintTop_toBottomOf="@+id/guessResultText"
+        app:layout_constraintVertical_bias="0.037" />
+
+    <Button
+        android:id="@+id/continueButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="156dp"
+        android:layout_marginBottom="50dp"
+        android:fontFamily="@font/renner"
+        android:onClick="onNextButtonPressed"
+        android:text="@string/continue_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.981"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guessEditText"
+        app:layout_constraintVertical_bias="0.965" />
 
     <Button
         android:id="@+id/enterButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="78dp"
+        android:layout_height="49dp"
+        android:layout_marginEnd="32dp"
         android:onClick="onEnterGuessPressed"
         android:text="@string/enter_button"
+        android:textSize="12sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/guessEditText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.225"
+        app:layout_constraintHorizontal_bias="0.608"
         app:layout_constraintStart_toEndOf="@+id/guessEditText"
         tools:text="@string/enter_button" />
 
@@ -41,30 +81,31 @@
         android:id="@+id/imageToGuess"
         android:layout_width="254dp"
         android:layout_height="275dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/numAttemptsText"
+        app:layout_constraintTop_toBottomOf="@+id/numAttemptsLabel"
         app:srcCompat="@drawable/frog" />
 
     <TextView
         android:id="@+id/numAttemptsLabel"
         android:layout_width="197dp"
         android:layout_height="30dp"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="2dp"
+        android:fontFamily="@font/renner"
         android:text="Number of Attempts:"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageToGuess"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText5"
-        app:layout_constraintVertical_bias="0.543" />
+        app:layout_constraintTop_toBottomOf="@+id/timePlayedGameLabel" />
 
     <TextView
         android:id="@+id/numAttemptsText"
-        android:layout_width="75dp"
-        android:layout_height="27dp"
+        android:layout_width="79dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="60dp"
+        android:fontFamily="@font/renner"
         android:textSize="18sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/numAttemptsLabel"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -73,32 +114,20 @@
         android:id="@+id/guessResultText"
         android:layout_width="257dp"
         android:layout_height="39dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/renner"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageToGuess" />
 
-    <Button
-        android:id="@+id/continueButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:onClick="onNextButtonPressed"
-        android:text="@string/continue_button"
-        app:layout_constraintBaseline_toBaselineOf="@+id/guessEditText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.225"
-        app:layout_constraintStart_toEndOf="@+id/guessEditText" />
-
     <TextView
-        android:id="@+id/titleText5"
+        android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/montserrat_bold"
+        android:layout_marginTop="52dp"
+        android:fontFamily="@font/renner"
         android:text="Picture Game"
         android:textColor="#636363"
         android:textSize="36sp"
