--- a/phase2/app/src/main/res/layout/activity_settings.xml
+++ b/phase2/app/src/main/res/layout/activity_settings.xml
@@ -24,26 +24,41 @@
         android:id="@+id/themeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/renner"
         android:text="Theme"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.167"
+        app:layout_constraintHorizontal_bias="0.164"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/languageRadioGroup" />
 
+    <Button
+        android:id="@+id/changeCharacterButton"
+        android:layout_width="140dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="132dp"
+        android:layout_marginEnd="52dp"
+        android:onClick="onChooseCharacterPressed"
+        android:text="Change Character"
+        app:layout_constraintBottom_toTopOf="@+id/themeText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintStart_toEndOf="@+id/languageRadioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/settingsText"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/language"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="28dp"
         android:fontFamily="@font/renner"
         android:text="Language"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.181"
+        app:layout_constraintHorizontal_bias="0.171"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settingsText" />
 
@@ -51,9 +66,9 @@
         android:id="@+id/languageRadioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.197"
+        app:layout_constraintHorizontal_bias="0.188"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/language">
 
@@ -86,22 +101,6 @@
 
     </RadioGroup>
 
-    <Button
-        android:id="@+id/changeCharacterButton"
-        android:layout_width="140dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="132dp"
-        android:layout_marginEnd="52dp"
-        android:onClick="onChooseCharacterPressed"
-        android:text="Change Character"
-        app:layout_constraintBottom_toTopOf="@+id/themeText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/languageRadioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/settingsText"
-        app:layout_constraintVertical_bias="0.085" />
-
     <ImageView
         android:id="@+id/characterImage"
         android:layout_width="79dp"
@@ -113,7 +112,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/language"
         app:layout_constraintTop_toBottomOf="@+id/settingsText"
-        app:layout_constraintVertical_bias="1.0"
+        app:layout_constraintVertical_bias="0.9"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
@@ -124,53 +123,57 @@
         android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/summerButton" />
-
-    <ImageButton
-        android:id="@+id/autumnButton"
-        android:layout_width="233dp"
-        android:layout_height="68dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:adjustViewBounds="false"
-        android:background="#00FFFFFF"
-        android:cropToPadding="false"
-        android:onClick="onThemeSelected"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/themeText"
-        app:srcCompat="@drawable/autumn_option_temp" />
+        app:layout_constraintTop_toBottomOf="@+id/summerButton"
+        app:layout_constraintVertical_bias="0.356" />
 
     <ImageButton
         android:id="@+id/winterButton"
-        android:layout_width="233dp"
-        android:layout_height="75dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="@dimen/theme_button_width"
+        android:layout_height="@dimen/theme_button_height"
+        android:layout_marginTop="8dp"
         android:adjustViewBounds="false"
         android:background="#00FFFFFF"
         android:cropToPadding="false"
         android:onClick="onThemeSelected"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/autumnButton"
         app:srcCompat="@drawable/autumn_option_temp" />
 
     <ImageButton
         android:id="@+id/summerButton"
-        android:layout_width="233dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="@dimen/theme_button_width"
+        android:layout_height="@dimen/theme_button_height"
+        android:layout_marginTop="8dp"
         android:adjustViewBounds="false"
         android:background="#00FFFFFF"
         android:cropToPadding="false"
         android:onClick="onThemeSelected"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/winterButton"
+        app:srcCompat="@drawable/autumn_option_temp" />
+
+    <ImageButton
+        android:id="@+id/autumnButton"
+        android:layout_width="@dimen/theme_button_width"
+        android:layout_height="@dimen/theme_button_height"
+        android:layout_marginTop="24dp"
+        android:adjustViewBounds="false"
+        android:background="#00FFFFFF"
+        android:cropToPadding="false"
+        android:onClick="onThemeSelected"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/themeText"
         app:srcCompat="@drawable/autumn_option_temp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
