--- a/phase2/app/src/main/res/layout/activity_tile_game.xml
+++ b/phase2/app/src/main/res/layout/activity_tile_game.xml
@@ -8,16 +8,17 @@
     tools:context=".Games.TileGame.TileGameActivity">
 
     <TextView
-        android:id="@+id/titleText3"
+        android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:fontFamily="@font/montserrat_bold"
+        android:layout_marginTop="44dp"
+        android:fontFamily="@font/renner"
         android:text="Memory Game"
         android:textColor="#636363"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/instructionText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.078" />
@@ -124,17 +125,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:fontFamily="@font/renner"
         android:text="Lives Remaining: 3/3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText3" />
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <TextView
         android:id="@+id/resultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
+        android:fontFamily="@font/renner"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +151,7 @@
         android:layout_marginTop="81dp"
         android:background="@drawable/unflipped"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText3" />
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <Button
         android:id="@+id/tile22"
@@ -158,7 +161,7 @@
         android:layout_marginTop="80dp"
         android:background="@drawable/unflipped"
         app:layout_constraintStart_toEndOf="@+id/tile21"
-        app:layout_constraintTop_toBottomOf="@+id/titleText3" />
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <Button
         android:id="@+id/tile23"
@@ -168,7 +171,7 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/unflipped"
         app:layout_constraintEnd_toStartOf="@+id/tile24"
-        app:layout_constraintTop_toBottomOf="@+id/titleText3" />
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <Button
         android:id="@+id/tile24"
@@ -178,7 +181,7 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/unflipped"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/titleText3" />
+        app:layout_constraintTop_toBottomOf="@+id/titleText" />
 
     <Button
         android:id="@+id/tile25"
