--- a/phase2/app/src/main/res/layout/activity_endless_runner.xml
+++ b/phase2/app/src/main/res/layout/activity_endless_runner.xml
@@ -2,6 +2,7 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/endlessRunnerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Games.RunningGame.EndlessRunnerActivity">
@@ -9,6 +10,5 @@
     <com.example.ourgame.Games.RunningGame.EndlessRunner
         android:id="@+id/gameView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </com.example.ourgame.Games.RunningGame.EndlessRunner>
+        android:layout_height="match_parent"></com.example.ourgame.Games.RunningGame.EndlessRunner>
 </FrameLayout>
