Grouped classes into packages (the ones in ourgame that weren't already in subpackages).

--- a/phase2/app/src/main/res/layout/activity_leader_board.xml
+++ b/phase2/app/src/main/res/layout/activity_leader_board.xml
@@ -5,7 +5,7 @@
     android:id="@+id/leaderboardLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LeaderBoardActivity">
+    tools:context=".Statistics.LeaderBoardActivity">
 
     <TextView
         android:id="@+id/title3"
