--- a/phase2/app/src/main/res/layout/activity_statistics.xml
+++ b/phase2/app/src/main/res/layout/activity_statistics.xml
@@ -99,13 +99,13 @@
         android:id="@+id/continueButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="156dp"
-        android:layout_marginEnd="96dp"
         android:fontFamily="@font/renner"
         android:onClick="onContinuePressed"
         android:text="@string/continue_button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/mainMenuButton"
         app:layout_constraintTop_toBottomOf="@+id/rankingText"
         app:layout_constraintVertical_bias="0.012" />
 
