--- a/phase2/app/src/main/res/layout/activity_statistics.xml
+++ b/phase2/app/src/main/res/layout/activity_statistics.xml
@@ -11,7 +11,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="72dp"
         android:fontFamily="@font/renner"
         android:text="Statistics"
         android:textAllCaps="true"
@@ -88,7 +88,7 @@
         android:id="@+id/mainMenuButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="92dp"
+        android:layout_marginStart="56dp"
         android:fontFamily="@font/renner"
         android:onClick="onMainMenuPressed"
         android:text="@string/main_menu_button"
@@ -100,14 +100,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="156dp"
-        android:layout_marginEnd="96dp"
+        android:layout_marginEnd="68dp"
         android:fontFamily="@font/renner"
         android:onClick="onContinuePressed"
         android:text="@string/continue_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rankingText"
-        app:layout_constraintVertical_bias="0.012" />
+        app:layout_constraintVertical_bias="0.4" />
 
     <Button
         android:id="@+id/backButton"
@@ -121,5 +121,16 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/continueButton" />
+
+    <ImageView
+        android:id="@+id/characterImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/backButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rankingValue"
+        app:layout_constraintVertical_bias="0.39"
+        tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
