--- a/phase2/app/src/main/res/layout/activity_main.xml
+++ b/phase2/app/src/main/res/layout/activity_main.xml
@@ -151,7 +151,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView5"
+        android:id="@+id/characterImage"
         android:layout_width="83dp"
         android:layout_height="70dp"
         android:layout_marginStart="5dp"
